<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="@dimen/large_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginStart="@dimen/large_padding"
        style="@style/TextAppearance.AppCompat.Title"
        android:text="@string/appointment_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="@dimen/xxlarge_padding"
        android:layout_marginStart="@dimen/large_padding"
        tools:text="John Doe's booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginStart="@dimen/large_padding"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            tools:text="12:30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            tools:text="AM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_gravity="center"
            android:background="@android:color/black"
            android:layout_width="6dp"
            android:layout_height="0.7dp" />

        <TextView
            tools:text="12:30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            tools:text="AM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginStart="@dimen/large_padding"
        android:text="in Green Room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingBottom="@dimen/medium_padding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_marginBottom="@dimen/medium_padding"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <Button
            style="@style/Button.White"
            android:layout_marginBottom="@dimen/medium_padding"
            android:text="@string/edit_in_google_calendar"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/basic_padding"
            android:layout_marginEnd="@dimen/basic_padding"
            android:layout_height="wrap_content" />

        <Button
            style="@style/Button.Blue"
            android:layout_marginEnd="@dimen/basic_padding"
            android:layout_marginStart="@dimen/basic_padding"
            android:text="@string/dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>